tooling/nargo_cli/tests/snapshots/compile_failure/checked_transmute/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: checked_transmute failed: `[Field; (1: numeric u32)]` != `[Field; ((1: numeric u32) + (1: numeric u32))]`
  ┌─ src/main.nr:8:5
  │
8 │     checked_transmute(x)
  │     --------------------
  │

Aborting due to 1 previous error
